k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms-auth-service
  namespace: hrms
  labels:
    app: hrms-auth-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: hrms-auth-service
  type: ClusterIP
